# copys

./: README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: main.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/card-item/: index.tsx
src/components/card-list/: index.tsx
src/components/icon/: index.tsx
src/components/nav-tab/: index.tsx
src/hook/: key-hook.ts
src/store/: context.ts
src/utils/: copy-text.ts  index.ts
