[package]
name = "copys"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# 安装360了的电脑需要关掉再进行build，不然会出现权限问题导致build失败
[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "process-relaunch", "dialog-message", "app-all", "dialog-confirm", "updater",
    "window-set-size",
    "window-set-position",
    "window-unminimize",
    "window-minimize",
    "window-set-focus",
    "window-close",
    "window-hide",
    "window-show",
    "global-shortcut-all",
    "clipboard-all",
    "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard = "1"
# 手动依赖降级，修改lock文件
# cargo update -p ravif  --precise 0.11.5

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
